# Anki-ai-image-occlusion-cards-generation-

./: .editorconfig  .env.example  .eslintrc.cjs  .gitignore  .pre-commit-config.yaml  FOUNDATION_CLEANUP.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MVP_GUIDE.md  README.md  docker-compose.backend.yml  index.html  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt  run.py  test_deck.apkg  test_deck2.apkg  test_deck5.apkg  test_deck_final.apkg  worker.py
backend/anki_image_occlusion_backend.egg-info/: PKG-INFO  SOURCES.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  cards.py  decks.py  export.py  files.py  health.py  ocr.py  submissions.py  tasks.py  upload.py
backend/app/core/: __init__.py  background_tasks.py  config.py  dependencies.py  logging.py  storage.py
backend/app/schemas/: __init__.py  cards.py  common.py  export.py  file_schemas.py  ocr.py  task_schemas.py
backend/app/services/: __init__.py  anki_export.py  base.py  card_generator.py  file_service.py  model_manager.py  ocr_service.py  task_service.py
backend/tests/: conftest.py  test_apkg_inspect.py  test_card_generator.py  test_cards_api.py  test_export_integration.py  test_file_service.py  test_health.py  test_ocr.py  test_placeholders.py  test_prompt_templates.py  test_smoke.py  test_submissions.py  test_upload.py
docs/: ACCESSIBILITY.md  API.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  IMPLEMENTATION_SUMMARY.md  OCR_UPLOAD_FLOW.md  OFFLINE_CACHING.md
frontend/: .env.example  .eslintrc.cjs  OCCLUSION_EDITOR.md  OCCLUSION_QUICK_START.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  prettier.config.cjs  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.css  App.test.tsx  App.tsx  index.css  main.tsx  vite-env.d.ts
src/: App.tsx
src/components/: error-boundary.tsx  header.tsx  layout.tsx  loading-page.tsx  loading-spinner.tsx  mobile-navigation.tsx  navigation.tsx  protected-route.tsx  public-route.tsx  theme-toggle.tsx
src/hooks/: use-error-handler.ts
src/lib/: api.ts  (+1 more)
(+98 files in other folders)
