[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anki-decks-pro-backend"
version = "0.1.0"
description = "FastAPI backend for Anki Decks Pro"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Team", email = "team@example.com" }]
dependencies = [
  "fastapi==0.109.0",
  "uvicorn[standard]==0.27.0",
  "pydantic==2.5.2",
  "pydantic-settings==2.1.0",
  "python-multipart==0.0.6",
  "httpx==0.25.2",
  "pytest==7.4.3",
  "pytest-asyncio==0.21.1",
  "black==23.12.1",
  "ruff==0.1.8",
]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
  "E",
  "F",
  "W",
  "I001",
]
ignore = [
  "E501",  # Line too long - Black handles this
]
exclude = [
  ".git",
  ".venv",
  "__pycache__",
  ".pytest_cache",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --strict-markers"
